--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "tempmail.js": "^0.2.1"
   }
 }
