--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "request": "^2.83.0",
+    "jsonic": "^0.3.0",
     "tempmail.js": "^0.2.1"
   }
 }
