--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.1",
     "request": "^2.83.0",
     "jsonic": "^0.3.0",
-    "tempmail.js": "^0.2.1"
+    "tempmail.js": "^0.2.1",
+    "axios": "^0.16.2"
   }
 }
