--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "request": "^2.83.0",
     "jsonic": "^0.3.0",
     "tempmail.js": "^0.2.1",
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "delay": "^2.0.0"
   }
 }
