--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.2",
     "jsonic": "^0.3.0",
     "node-meraki-dashboard": "0.0.3",
+    "plotly.js": "^1.31.2",
     "request": "^2.83.0",
     "tempmail.js": "^0.2.1"
   }
